@@ -1,44 +1,0 @@
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
-      xmlns:tal="http://xml.zope.org/namespaces/tal"
-      xmlns:metal="http://xml.zope.org/namespaces/metal"
-      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-      lang="en"
-      metal:use-macro="here/main_template/macros/master"
-      i18n:domain="ftw.blog">
-
-    <body>
-
-        <div metal:fill-slot="main" class="blogView">
-            <metal:main-macro define-macro="main">
-                <div tal:replace="structure provider:plone.abovecontenttitle" />
-
-
-                <h1 class="documentFirstHeading">
-                    <tal:title replace="context/Title" />
-                </h1>
-                <div tal:replace="structure provider:plone.belowcontenttitle" />
-
-                <tal:docactions tal:condition="view/objectActions">
-                    <span class="hiddenStructure" i18n:translate="simplelayout_actions">Blog Actions</span>
-
-                    <ul class="blogActions" tal:define="normalizeString nocall: context/@@plone/normalizeString">
-
-                        <tal:actions repeat="daction view/objectActions">
-                            <li tal:attributes="id python:'document-action-' + normalizeString(daction['id'])">
-                                <a href=""
-                                   tal:attributes="href daction/url;
-                                                   title daction/description"
-                                   tal:content="daction/title">
-
-                                </a>
-                            </li>
-                        </tal:actions>
-
-                    </ul>
-
-                </tal:docactions>
-
-            </metal:main-macro>
-        </div>
-    </body>
-</html>
