@@ -1,36 +1,0 @@
-<?xml version="1.0"?>
-<object xmlns:i18n="http://xml.zope.org/namespaces/i18n" name="portal_actions" meta_type="Plone Actions Tool">
-	<object name="object_blog_settings_actions" meta_type="CMF Action Category">
-		<property name="title"/>
-		<object name="manage_blog_portlets" meta_type="CMF Action" i18n:domain="ftw.blog"
-            remove="True">
-		</object>
-		<object name="edit_blog" meta_type="CMF Action" i18n:domain="ftw.blog">
-			<property name="title" i18n:translate="">Edit Blog</property>
-			<property name="description" i18n:translate=""/>
-			<property name="url_expr">nocall:here/@@blog-settings/editBlog</property>
-			<property name="icon_expr"/>
-			<property name="available_expr"/>
-            <property name="visible">True</property>
-		</object>
-		<object name="manage_categories" meta_type="CMF Action" i18n:domain="ftw.blog">
-			<property name="title" i18n:translate="">Manage categories</property>
-			<property name="description" i18n:translate=""/>
-			<property name="url_expr">string:./categories</property>
-			<property name="icon_expr"/>
-			<property name="available_expr"/>
-		</object>
-	</object>
-    <object name="object_buttons" meta_type="CMF Action Category">
-		<object name="blog_settings" meta_type="CMF Action" i18n:domain="ftw.blog">
-			<property name="title" i18n:translate="">Blog Settings</property>
-			<property name="description" i18n:translate=""/>
-			<property name="url_expr">string:./@@blog-settings</property>
-			<property name="icon_expr"/>
-			<property name="available_expr">python: object.Type() == 'Blog'</property>
-			<property name="permissions">
-				<element value="Modify portal content"/>
-			</property>
-		</object>
-    </object>
-</object>
